added MailStatus & Audit controllers/endpoints, fixed a problem with SendMailController, updated documentation
