# src/api/Server.ts
@@ -5,13 +5,18 @@ import * as jsyaml from 'js-yaml';
 import * as path from 'path';
 import * as swaggerTools from 'swagger-tools';
 import { logger } from '../logger';
+
 import { SendMailController } from '../controllers/SendMailController';
+import { MailStatusController } from '../controllers/MailStatusController';
+import { AuditController } from '../controllers/AuditController';
 
 export class Server {
 
     private application: express.Application;
     private port: number;
     private sendMailController: SendMailController;
+    private mailStatusController: MailStatusController;
+    private auditController: AuditController;
     private apiSpecification: string = path.join(__dirname, 'api.yaml');
     private swaggerDoc: any;
 
@@ -19,11 +24,14 @@ export class Server {
         application: express.Application = express(),
         port: number = parseInt(process.env.PORT || '3050'),
         sendMailController: SendMailController = SendMailController.bootstrap(),
+        mailStatusController: MailStatusController = MailStatusController.bootstrap(),
+        auditController: AuditController = AuditController.bootstrap(),
     ) {
         this.application = application;
         this.port = port;
         this.sendMailController = sendMailController;
-
+        this.mailStatusController = mailStatusController;
+        this.auditController = auditController;
         this.swaggerDoc = jsyaml.safeLoad(fs.readFileSync(this.apiSpecification, 'utf8'));
     }
 
@@ -35,12 +43,13 @@ export class Server {
             swaggerValidator,
             swaggerUi,
         }: any = await this.getSwaggerMiddleware(this.swaggerDoc);
+
         this.application.use(bodyParser.json());
         this.application.use(swaggerValidator());
         this.application.use(this.router);
         this.application.use(swaggerUi());
 
-        this.application.listen(this.port, () => logger.info(`Example app listening on port ${this.port}`));
+        this.application.listen(this.port, () => logger.info(`mail-service listening on port ${this.port}`));
     }
 
     /**
@@ -50,6 +59,8 @@ export class Server {
         const router: express.Router = express.Router();
 
         router.post('/message', this.sendMailController.getMiddleware());
+        router.get('/message/:id', this.mailStatusController.getMiddleware());
+        router.get('/audit', this.auditController.getMiddleware());
 
         return router;
     }
